# anomaly_system

./: README.md  fix_venv.sh  pyproject.toml
src/anomaly_system/: __init__.py  __main__.py  config.py  main.py  server.py
src/anomaly_system/data/: synthetic_data.csv
src/anomaly_system/llm/: __init__.py  agent.py  ollama_client.py  report_generator.py  tool_registry.py  vision_analyzer.py
src/anomaly_system/outputs/models/: isolation_forest.joblib
src/anomaly_system/outputs/reports/: agent_report_20260312_103238.md  agent_report_20260312_142312.md  agent_report_20260312_150455.md  agent_report_20260312_152658.md  experiment_20260312_103158.md
src/anomaly_system/outputs/tmp/: X_test.parquet  X_train.parquet  predictions.parquet  scaler.joblib  y_test.parquet  y_train.parquet
src/anomaly_system/templates/: index.html
src/anomaly_system/tools/: __init__.py  data_loader.py  data_utils.py  evaluation.py  grid_search.py  inference.py  isolation_forest.py  visualization.py
