[project]
name = "anomaly-system"
version = "0.1.0"
description = "LLM-driven anomaly detection on Mac Mini M4 with Isolation Forest, orchestrated by Qwen 3.5 9B on Ollama (Metal)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "httpx>=0.27.0",
    "pyarrow>=23.0.1",
]

[project.scripts]
anomaly-system = "anomaly_system.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anomaly_system"]
